[package]
name = "ccn"
version = "0.1.1"
edition = "2021"
authors = ["naoto0822"]
description = "Claude Code Notifier - Send macOS notifications with editor jump functionality for Claude Code hooks"
readme = "README.md"
homepage = "https://github.com/naoto0822/ccn"
repository = "https://github.com/naoto0822/ccn"
license = "MIT"
keywords = ["claude-code", "notification", "macos", "vscode", "cursor"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
tnr = "0.2.0"
